--- a/htdocs/css/example.css
+++ b/htdocs/css/example.css
@@ -1,3 +1,27 @@
+/*
+  # optional configuration
+
+  # `base_url` is a url at which the resulting css
+  # and image files can be reached.
+  # if not set, uses file-relative paths (recommended).
+  #spritemapper.base_url = http://example.com/static/css/
+
+  # `sprite_folders` is a list of folders within which to create
+  # spritemaps. the named folders and their subdirectories are all
+  # spritemapped (if there are sprites used in those directories). by
+  # default, all top-level directories are used.
+  spritemapper.sprite_dirs = ../img/example-sprite
+
+  # `output_css` sets the name for the rewritten css file.
+  # defaults to sm_{filename}
+  spritemapper.output_css = example.css
+
+  # `output_image` is the name of output spritemap image.
+  # sprite_dirs is incompatible with this because both tell the
+  # spritemapper how to map sprites to spritemaps.
+  # by default, <dir>.png
+  #spritemapper.output_image = ../img/sm.png
+*/
 
 .mysprite1 {
   background: url(../img/example-sprite.png) no-repeat 0 0;
