Update documentation for sprite_dirs

--- a/htdocs/css/example_source.css
+++ b/htdocs/css/example_source.css
@@ -6,10 +6,9 @@
   # if not set, uses file-relative paths (recommended).
   #spritemapper.base_url = http://example.com/static/css/
 
-  # `sprite_folders` is a list of folders within which to create
-  # spritemaps. the named folders and their subdirectories are all
-  # spritemapped (if there are sprites used in those directories). by
-  # default, all top-level directories are used.
+  # `sprite_dirs` is a list of directories within which to allow
+  # spritemaps to be generated.
+  # by default, all directories are eligible.
   spritemapper.sprite_dirs = ../img/example-sprite
 
   # `output_css` sets the name for the rewritten css file.
