--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -1,4 +1,6 @@
 
+@import url("logo_anim.css");
+
 body {
   background-color: #f5f9f0;
   background-image: url(../img/bg.png);
@@ -248,6 +250,4 @@ section h3 {
 .die p .browser a {
   margin: 0 2px;
 }
-
-@import("logo_anim.css");
 
