--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -5,17 +5,60 @@
 * { margin: 0; padding: 0; border: 0; }
 
 body {
-  background-color: #f5f9f0;
-  background-image: url(../img/bg.png);
-  background-repeat: repeat-x;
+  background: #f5f9f0 url(../img/bg.png) repeat-x;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.3;
   color: #252626;
 }
 
+a {
+  color: #DD6E08;
+}
+
+h2 {
+  font-size: 150%;
+  margin-top: 1.5em;
+}
+
+h3 {
+  font-size: 16px;
+  margin: 20px 0;
+  margin-bottom: 10px;
+  clear: both;
+}
+
+p {
+  margin: 1em 5px;
+  line-height: 1.5em;
+}
+
+ul, ol {
+  margin: 1em 0 1em 2em;
+}
+
+ul li, ol li {
+  margin-top: .5em;
+  margin-bottom:.5em;
+}
+
+ul ul, ul ol, ol ol, ol ul {
+  margin-top: 0;
+  margin-bottom:0;
+}
+
+dt {
+  font-weight :bold;
+  margin-left: 1em;
+}
+
+dd {
+  margin-left: 2em;
+  margin-bottom: 1em;
+}
+
 .grid-wrap {
-  width: 900px;
+  width: 850px;
   margin: 0 auto;
 }
 
@@ -46,6 +89,7 @@ header p {
   font-size: 12px;
   left: 159px;
   top: 64px;
+  margin: 0;
   -webkit-animation: logo-subtext .5s .8s 1 ease-out backwards;
 }
 
@@ -123,7 +167,7 @@ a.fork {
 pre.code {
   background: #fff;
   padding: 20px;
-  font-family: 'Menlo', 'Monaco', fixed;
+  font-family: 'Menlo', 'Monaco', monospace;
   font-size: 12px;
   width: 500px;
   -webkit-box-shadow: 0 0 3px #7E7E7E;
@@ -171,23 +215,7 @@ pre.code {
   font-weight: bold;
 }
 
-section h2 {
-  font-size: 33px;
-  text-indent: 10px;
-  margin-bottom: 15px;
-}
 
-section p {
-  margin: 0 20px 0.75em 20px;
-}
-
-section h3 {
-  font-size: 23px;
-  text-indent: 15px;
-  margin: 20px 0;
-  margin-bottom: 10px;
-  clear: both;
-}
 
 #example pre {
   float: left;
@@ -196,6 +224,7 @@ section h3 {
 
 #example ul {
   float: left;
+  list-style: none;
 }
 
 #test ul li {
@@ -241,4 +270,28 @@ section h3 {
 
 .die p .browser a {
   margin: 0 2px;
+}
+
+footer {
+  width: 254px;
+  margin: 60px auto;
+}
+
+.love span {
+  width: 230px;
+  display: block;
+  margin-left: 25px;
+  margin-bottom: 20px;
+  text-indent: -10px;
+  font-family: 'Menlo', 'Monaco', monospace;
+}
+
+#yostudios {
+  display: block;
+  background-image: url(../img/sprites/yostudios.png);
+  width: 254px;
+  height: 293px;
+  overflow: hidden;
+  text-indent: -999px;
+
 }
