--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -16,6 +16,15 @@ a {
   color: #DD6E08;
 }
 
+code {
+    font-family: 'Menlo', monospace;
+    font-size: 8pt;
+    letter-spacing: -0.15em;
+    color: #dedede;
+    background: #242424;
+    padding: 0 2px;
+}
+
 h2 {
   font-size: 150%;
   margin-top: 1.5em;
