--- a/htdocs/css/logo_anim.css
+++ b/htdocs/css/logo_anim.css
@@ -31,5 +31,9 @@
 @-webkit-keyframes logo-subtext {
   0% { opacity: 0; }
   100% { opacity: 1; }
+}
 
+@-webkit-keyframes letter-in {
+  0% { opacity: 0; -webkit-transform: scale(2); }
+  100% { opacity: 1; }
 }
