--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -356,8 +356,8 @@ p.input input {
 }
 
 #yostudios {
+  background: url(../img/sprites/yostudios.png);
   display: block;
-  background-image: url(../img/sprites/yostudios.png);
   width: 254px;
   height: 293px;
   overflow: hidden;
